# cripto_bot

./: .env  .gitignore  .pre-commit-config.yaml  Cifras.txt  FIX_BARRAS.md  README.md  activate.sh  check_system.py  estructura.txt  main.py  maintenance.sh  pyproject.toml  requirements.txt
data/datasets/: BTCUSDT_master.json
docs/: FASE1_COMPLETED.md
reports/run_legacy/: equity.csv  summary.json  trades.csv
runs/20251102T212811Z/: data.csv  equity.csv  manifest.json  summary.json  trades.csv
runs/20251103T122556Z/: equity.csv  manifest.json  quality.json  trades.csv  validation.json
runs/20251106T115333Z/: data.csv  decisions.csv  equity.csv  manifest.json  quality.json  summary.json  trades.csv
runs/quick_check/: decisions.csv  equity.csv  summary.json  trades.csv
runs_opt/: consolidated_results.csv
src/bars/: __init__.py  base.py  composite.py  dollar.py  imbalance.py  registry.py  tick_count.py  volume_qty.py
src/brokers/: base.py  binance_paper.py
src/config/: config.yaml
src/core/: __init__.py  broker.py  broker_sim.py  config_loader.py  costs.py  datafeed.py  decisions_log.py  engine.py  executor.py  executor_live.py  io.py  logger_config.py  metrics.py  policies.py  portfolio.py  sim_engine.py  strategy.py  strategy_runtime.py  types.py
src/cripto_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data/: bars.py  csv_legacy.py  storage.py  validate.py
src/exchange/: binance_stream.py
src/features/: __init__.py  technical_indicators.py
src/io/: bar_writer.py
src/report/: metrics_basic.py  metrics_compare.py
src/strategies/: __init__.py  base.py  buy_and_hold.py  momentum.py  momentum_v2.py  signals_old.py  vol_breakout.py  vwap_reversion.py
src/tests/: test_dollar.py  test_imbalance.py  test_tick_count.py  test_volume_qty.py
src/tools/: inspect_last.py  run_mem_loop.py  run_stream.py
tests/: conftest.py  test_binance_paper.py  test_brokers_base.py  test_builders.py  test_composite_builder.py  test_costs.py  test_e2e_flow.py  test_imports.py  test_integration.py  test_momentum_v2.py  test_signals_momentum.py  test_unified_builder.py  test_vol_breakout.py  test_vwap_reversion.py
tools/: analizar_frecuencia_trades.py  check_csvfeed.py  diagnostico_barras.py  make_metrics.py  make_run_from_csv.py  run_backtest.py  run_engine.py  run_live.py  run_live_binance.py  run_minimal.py  smoke_validate.sh  test_momentum_v2.py  test_signal_calculation.py  test_strategies_signals.py  validate_bars.py  verify_all_strategies.py  verify_dashboard_signals.py  visual_live.py
tools/analysis/: __init__.py  calibrate_costs.py  cleanup_optimization_runs.py  consolidate_optimization_results.py  make_metrics_table.py  quick_run_momentum.py  walkforward_momentum.py
tools/backtest/: __init__.py  baseline_validator.py
tools/data/: __init__.py  capture_testnet_ticks.py  make_bars.py  update_master_dataset.py
tools/live/: __init__.py  dashboard_launcher.py  executor.py  output_writers.py  run_binance.py  run_live.py  run_paper_trading.py  run_stream.py  trading_loop.py
tools/optimize/: README_V2.md  __init__.py  base.py  builder_configs.py  datasets.py  example_momentum.py  momentum.py  optimizers.py  phase1_grid_builders.py  phase2_walkforward.py  run_momentum.py  run_vol_breakout.py  (+2 more)
(+57 files in other folders)
