[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cripto_bot"
version = "0.1.0"
description = "Trading casi automático de criptomonedas"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff: lint + autofix (imports) ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Errores/avisos básicos + bugs + pyupgrade + imports
select = ["E", "W", "F", "B", "UP", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"check_system.py" = ["E402"]
"src/core/io.py" = ["E402"]

[tool.ruff.lint.isort]
# Imports normalizados: usamos 'from bars...', 'from core...', etc. (sin 'src.' prefix)
# Ejecutar con PYTHONPATH=$(pwd)/src para que funcionen correctamente
known-first-party = ["bars", "core", "strategies", "brokers", "data", "report", "io", "tools", "exchange"]
combine-as-imports = true
force-sort-within-sections = true

# --- Black: único formateador ---
[tool.black]
line-length = 120
target-version = ["py312"]

# --- Mypy: cómodo por ahora, con overrides donde interesan ---
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
allow_untyped_globals = true
allow_untyped_calls = true
no_implicit_optional = false
disallow_untyped_defs = false
check_untyped_defs = false
# Importante: mypy necesita saber dónde buscar los módulos cuando usamos imports sin 'src.'
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "core.strategy_runtime"
ignore_errors = true

[[tool.mypy.overrides]]
module = "strategies.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "report.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.test_momentum_v2"
ignore_errors = true

# --- Pytest: configuración de tests ---
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
# IMPORTANTE: pythonpath debe apuntar a src para que pytest encuentre los módulos
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
